# riptree

./: .gitignore  LICENSE  README.md  pyproject.toml
riptree/: __init__.py  cli.py  icons.py
